# included-repo

./: README.md  pyproject.toml
included_repo/: __init__.py
src/included_repo/: thing.py
