[tool.poetry]
name = "included-repo"
version = "0.1.0"
description = ""
authors = ["Kent Friesen <kfreezen@gmail.com>"]
readme = "README.md"
packages = [
    { include='included_repo', from='src' }
]
exclude = ['src/included_repo/vendors/**/*.py']
include = ['src/included_repo/vendors/__init__.py']


[tool.poetry.dependencies]
python = "^3.11"
shell-project = {version = "^0.1.0", source = "gitlab"}


[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/65565869/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
